# rsomics-bam-markdup

./: Cargo.toml
benches/: bench.rs
src/: cli.rs  key.rs  lib.rs
tests/: compat.rs  smoke.rs
tests/golden/: mixed_se_pe.sam  small.bam  small_pe.sam  stream_tiebreak.sam
