[package]
name = "rsomics-bam-markdup"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Mark or remove PCR/optical duplicates in sorted BAM — Rust port of samtools markdup"

[[bin]]
name = "rsomics-bam-markdup"
path = "src/main.rs"

[dependencies]
rsomics-common = { path = "../../../foundation/rsomics-common", version = "0.6" }
rsomics-help = { path = "../../../foundation/rsomics-help", version = "0.3" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
noodles = { workspace = true, features = ["sam", "bam"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
